syntax = "proto3";

package company;

import "google/protobuf/timestamp.proto";

option go_package= "./company";

service CompanyService{
  rpc CreateCompany(CreateCompanyRequest) returns (CreateCompanyResponse);
  rpc GetCompany(GetCompanyRequest) returns (GetCompanyResponse);
  rpc GetCompanyByName(GetCompanyByNameRequest) returns (GetCompanyByNameResponse);
  rpc GetCompanyByNameUrl(GetCompanyByNameUrlRequest) returns (GetCompanyByNameUrlResponse);
  rpc GetCompanies(GetCompaniesRequest) returns (GetCompaniesResponse);
  rpc UpdateCompany(UpdateCompanyRequest) returns (UpdateCompanyResponse);
  rpc DeleteCompany(DeleteCompanyRequest) returns (DeleteCompanyResponse);
}

message CreateCompanyRequest{
  string name = 1;
	google.protobuf.Timestamp lastPaymentDate = 2;
}

message CreateCompanyResponse{
  int64 id = 1;
  int64 status = 2;
  string error = 3;
}

message GetCompanyRequest{
  int64 id = 1;
}

message GetCompanyResponse{
  int64 id = 1;
  string name = 2;
  string name_format_url = 3;
  optional string imageUrl = 4;
  int64 plan_id = 5;
	google.protobuf.Timestamp lastPaymentDate = 6;
  int64 status = 7;
  string error = 8;
}

message GetCompanyByNameRequest{
  string name = 1;
}

message GetCompanyByNameResponse{
  int64 id = 1;
  string name = 2;
  string name_format_url = 3;
  optional string imageUrl = 4;
  int64 plan_id = 5;
	google.protobuf.Timestamp lastPaymentDate = 6;
  int64 status = 7;
  string error = 8;
}

message GetCompanyByNameUrlRequest{
  string nameUrl = 1;
}

message GetCompanyByNameUrlResponse{
  int64 id = 1;
  string name = 2;
  string name_format_url = 3;
  optional string imageUrl = 4;
  int64 plan_id = 5;
	google.protobuf.Timestamp lastPaymentDate = 6;
  int64 status = 7;
  string error = 8;
}

message GetCompaniesRequest{
  int32 limit = 1;
  int32 offset = 2;
}

message GetCompaniesResponse{
  repeated GetCompanyResponse companies = 1;
  int64 status = 2;
  string error = 3;
}

message UpdateCompanyRequest{
  int64 id = 1;
  string name = 2;
  string name_format_url = 3;
  optional bytes image = 4;
}

message UpdateCompanyResponse{
  int64 status = 1;
  string error = 2;
}

message DeleteCompanyRequest{
  int64 id = 1;
}

message DeleteCompanyResponse{
  int64 status = 1;
  string error = 2;
}
